--- a/efk_stack/templates/elasticsearch_data-statefulset.yaml
+++ b/efk_stack/templates/elasticsearch_data-statefulset.yaml
@@ -6,6 +6,8 @@ metadata:
   labels:
     {{- include "oht-devops.labels" . | nindent 4 }}
     role: data
+  annotations:
+    checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
 spec:
   serviceName: {{ .Values.elasticsearch.name }}-data
   replicas: 3
@@ -33,11 +35,41 @@ spec:
         - vm.max_map_count=262144
         securityContext:
           privileged: true
+      - name: provision-keystore
+        image: "{{ .Values.elasticsearch.image.repository }}:{{ .Values.elasticsearch.image.tag }}"
+        command:
+        - sh
+        - -c
+        - |
+          #!/usr/bin/env bash
+          set -euo pipefail
+          elasticsearch-keystore create
+          #for i in /tmp/keystoreSecrets/*/*; do
+            #key=$(basename $i)
+            #echo "Adding file $i to keystore key $key"
+            #elasticsearch-keystore add-file "$key" "$i"
+          #done
+          # Add the bootstrap password since otherwise the Elasticsearch entrypoint tries to do this on startup
+          if [ ! -z ${ELASTIC_PASSWORD+x} ]; then
+            echo 'Adding env $ELASTIC_PASSWORD to keystore as key bootstrap.password'
+            echo "$ELASTIC_PASSWORD" | elasticsearch-keystore add -x bootstrap.password
+          fi
+          cp -a /usr/share/elasticsearch/config/elasticsearch.keystore /tmp/keystore/
+        env:
+        - name: ELASTIC_PASSWORD
+          value: "es_bootstrap_password"
+        volumeMounts:
+          - name: keystore
+            mountPath: /tmp/keystore
+          #{{- range .Values.keystore }}
+          #- name: keystore-{{ .secretName }}
+            #mountPath: /tmp/keystoreSecrets/{{ .secretName }}
+          #{{ end }}
       containers:
       - name: {{ .Values.elasticsearch.name }}-data
         image: "{{ .Values.elasticsearch.image.repository }}:{{ .Values.elasticsearch.image.tag }}"
         env:
-        - name: discovery.seed_hosts
+        - name: discovery.seed_hosts 
           value: "{{ .Values.elasticsearch.name }}-discovery.default.svc:9300,{{ .Values.elasticsearch.name }}-data.default.svc:9300,{{ .Values.elasticsearch.name }}-client.default.svc:9200"
         - name: NODE_MASTER
           value: "true"
@@ -59,11 +91,19 @@ spec:
         - containerPort: 9300
           name: transport
         volumeMounts:
-        - name: {{.Values.elasticsearch.name }}-data
+        - name: {{ .Values.elasticsearch.name }}-data
           mountPath: /usr/share/elasticsearch/data
-        - name: {{.Values.elasticsearch.name }}-config
+        - name: {{ .Values.elasticsearch.name }}-config
           mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
           subPath: elasticsearch.yml
+        - name: {{ .Values.elasticsearch.name }}-config
+          mountPath: /usr/share/elasticsearch/config/role_mapping.yml
+          subPath: role_mapping.yml
+        - name: keystore
+          mountPath: /usr/share/elasticsearch/config/elasticsearch.keystore
+          subPath: elasticsearch.keystore
+        - name: {{ .Values.elasticsearch.name }}-certs
+          mountPath: /usr/share/elasticsearch/config/certs/
       volumes:
       - name: elasticsearch-config
         configMap:
@@ -71,6 +111,17 @@ spec:
           items:
             - key: elasticsearch.yml
               path: elasticsearch.yml
+            - key: role_mapping.yml
+              path: role_mapping.yml
+      - name: keystore
+        emptyDir: {}
+      - name: {{ .Values.elasticsearch.name }}-certs
+        secret:
+          secretName: {{ .Values.elasticsearch.name }}-certs
+      #{{- range .Values.keystore }}
+      #- name: keystore-{{ .secretName }}
+        #secret: {{ toYaml . | nindent 12 }}
+      #{{- end }}
 
   volumeClaimTemplates:
   - metadata:
