--- a/efk_stack/templates/elasticsearch_client-deployment.yaml
+++ b/efk_stack/templates/elasticsearch_client-deployment.yaml
@@ -55,7 +55,10 @@ spec:
           cp -a /usr/share/elasticsearch/config/elasticsearch.keystore /tmp/keystore/
         env:
         - name: ELASTIC_PASSWORD
-          value: "es_bootstrap_password"
+          valueFrom:
+            secretKeyRef:
+              name: elastic-stack-secrets
+              key: ES_BOOTSTRAP_PASSWORD
         volumeMounts:
           - name: keystore
             mountPath: /tmp/keystore
