--- a/efk_stack/templates/kibana-deployment.yaml
+++ b/efk_stack/templates/kibana-deployment.yaml
@@ -46,7 +46,10 @@ spec:
           cp -a /usr/share/kibana/data/kibana.keystore /tmp/keystore/
         env:
         - name: ELASTIC_PASSWORD
-          value: "es_bootstrap_password"
+          valueFrom:
+            secretKeyRef:
+              name: elastic-stack-secrets
+              key: ES_KIBANA_PASSWORD
         volumeMounts:
           - name: keystore
             mountPath: /tmp/keystore
