--- a/efk_stack/Makefile
+++ b/efk_stack/Makefile
@@ -6,14 +6,20 @@ install:
 	helm upgrade --install --values ./values.yaml $(RELEASE) ./
 
 purge:
-	helm uninstall $(RELEASE)
+	helm uninstall $(RELEASE) || true
 	kubectl delete secrets \
+		elastic-stack-secrets \
 		elasticsearch-certs \
-		elasticsearch-ca
+		elasticsearch-ca \
+		elasticsearch-cer \
+		elasticsearch-key ;\
 	kubectl delete pvc \
 		elasticsearch-data-elasticsearch-data-0 \
 		elasticsearch-data-elasticsearch-data-1 \
-		elasticsearch-data-elasticsearch-data-2
+		elasticsearch-data-elasticsearch-data-2 \
+		elasticsearch-data-elasticsearch-client-0 \
+		elasticsearch-data-elasticsearch-client-1 \
+		elasticsearch-data-elasticsearch-master-0
 
 secrets:
 	docker rm -f elastic-certs || true
@@ -24,13 +30,13 @@ secrets:
 		elasticsearch:7.6.0 \
 	  /bin/sh -c " \
 			elasticsearch-certutil ca --pass '' --out /certs/elastic-stack-ca.p12  && \
-			elasticsearch-certutil cert --ca /certs/elastic-stack-ca.p12 --name security-master --dns "elasticsearch-client.default.svc" --pass '' --ca-pass '' --out /certs/elasticsearch-certs.p12 \
+			elasticsearch-certutil cert --ca /certs/elastic-stack-ca.p12 --name security-master --dns "elasticsearch-client.default.svc,kibana.default.svc" --pass '' --ca-pass '' --out /certs/elasticsearch-certs.p12 \
 			" ;\
 	# extract CA certificate from pkcs#12 certificate	
 	openssl pkcs12 -in certs/elasticsearch-certs.p12 -nodes -passin pass:'' -out certs/elasticsearch-ca.pem
 	#openssl pkcs12 -in certs/elastic-stack-ca.p12 -cacerts -nokeys -out certs/elasticsearch-ca.pem
-	openssl pkcs12 -in certs/elasticsearch-certs.p12 -nocerts -nodes  -out certs/elasticsearch.key
-	openssl pkcs12 -in certs/elasticsearch-certs.p12 -clcerts -nokeys -out certs/elasticsearch.cer
+	openssl pkcs12 -in certs/elasticsearch-certs.p12 -nocerts -nodes -passin pass:'' -out certs/elasticsearch.key
+	openssl pkcs12 -in certs/elasticsearch-certs.p12 -clcerts -nokeys -passin pass:'' -out certs/elasticsearch.cer
 	#openssl pkcs12 -in certs/elasticsearch-certs/elasticsearch-certs.p12 -cacerts -nokeys  -chain -out certs/elasticsearch-certs/client-ca.cer
 	# create kubernetes secrets from .env file & certificates
 	kubectl create secret generic elastic-stack-secrets --from-env-file=.env ;\
