--- a/efk_stack/templates/configmap.yaml
+++ b/efk_stack/templates/configmap.yaml
@@ -14,12 +14,16 @@ data:
         key: "/usr/share/kibana/data/elasticsearch.key"
     elasticsearch.hosts: ["https://elasticsearch-client.default.svc:443"]
     elasticsearch.username: "kibana"
-    #elasticsearch.password: "es_bootstrap_password"
+    xpack.monitoring.elasticsearch.username: "elastic"
+    xpack.monitoring.elasticsearch.password: "es_bootstrap_password"
     elasticsearch.ssl.verificationMode: "certificate"
     #elasticsearch.ssl.key: "/usr/share/kibana/data/certs/elasticsearch.key"
     #elasticsearch.ssl.certificate: "/usr/share/kibana/data/certs/elasticsearch.cer"
     elasticsearch.ssl.certificateAuthorities: ["/usr/share/kibana/data/elasticsearch-ca.pem"]
     elasticsearch.requestTimeout: 90000
+    xpack:
+      security:
+        loginAssistanceMessage: "Welcome to the OptumHealth Technology Operations Center."
 
   apm-server.yml: |-
     apm-server:
@@ -27,21 +31,17 @@ data:
       kibana:
         enabled: true
         host: "kibana.default.svc:80"
-        username: "elastic" 
-        #password: "es_bootstrap_password"
+        username: "elastic"
         password: "${ES_APMSERVER_PASSWORD}"
     output.elasticsearch:
       hosts: ["https://elasticsearch-client.default.svc:443"]
-      username: "elastic" 
+      username: "elastic"
       #password: "es_bootstrap_password"
       password: "${ES_APMSERVER_PASSWORD}"
       ssl:
         enabled: "true"
         verification_mode: "full"
         certificate_authorities: ["/usr/share/apm-server/data/certs/elasticsearch-ca.pem"]
-
-
-
     monitoring.enabled: true
     monitoring.elasticsearch:
       hosts: ["https://elasticsearch-client.default.svc:443"]
@@ -163,6 +163,57 @@ data:
       @type stdout
     </match>
 
+  metricbeat.yml: |-
+    # ======================== Metricbeat Configuration =========================
+    metricbeat.config.modules:
+
+      # Glob pattern for configuration reloading
+      path: ${path.config}/modules.d/*.yml
+
+      # Period on which files under path should be checked for changes
+      reload.period: 10s
+
+      # Set to true to enable config reloading
+      reload.enabled: false
+
+    # Maximum amount of time to randomly delay the start of a metricset. Use 0 to
+    # disable startup delay.
+    metricbeat.max_start_delay: 10s
+
+    # Setup Kibana dashboards
+    setup.dashboards.enabled: false
+    setup.kibana.host: "https://kibana.default.svc:443"
+    setup.kibana.ssl.enabled: true
+    setup.kibana.ssl.certificate_authorities: ["/usr/share/metricbeat/data/elasticsearch-ca.pem"]
+
+    output.elasticsearch:
+      # Array of hosts to connect to.
+      hosts: ["https://elasticsearch-client.default.svc:443"]
+      ssl.certificate_authorities: ["/usr/share/metricbeat/data/elasticsearch-ca.pem"]
+
+      # Optional protocol and basic auth credentials.
+      protocol: "https"
+      username: "elastic"
+      password: "es_bootstrap_password"
+
+  metricbeat-elasticsearch-xpack.yml: |-
+    # ======================== Metricbeat Modules Configuration =========================
+    - module: elasticsearch
+      metricsets:
+        - ccr
+        - cluster_stats
+        - index
+        - index_recovery
+        - index_summary
+        - ml_job
+        - node_stats
+        - shard
+      period: 10s
+      hosts: ["https://localhost:9200"]
+      username: "elastic"
+      password: "es_bootstrap_password"
+      xpack.enabled: true
+
 
   elasticsearch.yml: |-
     # ======================== Elasticsearch Configuration =========================
@@ -235,11 +286,11 @@ data:
     # Pass an initial list of hosts to perform discovery when this node is started:
     # The default list of hosts is ["127.0.0.1", "[::1]"]
     #
-    discovery.seed_hosts: ["{{ .Values.elasticsearch.name }}-discovery.default.svc:9300,{{ .Values.elasticsearch.name }}-data.default.svc:9300,{{ .Values.elasticsearch.name }}-client.default.svc:443"]
+    discovery.seed_hosts: ["{{ .Values.elasticsearch.name }}-discovery.default.svc:9300"]
     #
     # Bootstrap the cluster using an initial set of master-eligible nodes:
     #
-    cluster.initial_master_nodes: "elasticsearch-master"
+    cluster.initial_master_nodes: "elasticsearch-master-0, elasticsearch-master-1, elasticsearch-master-2"
     #
     # For more information, consult the discovery and cluster formation module documentation.
     #
@@ -257,22 +308,32 @@ data:
     #
     #action.destructive_requires_name: true
     # ---------------------------------- Security ----------------------------------
-    xpack.security.enabled: true
-    xpack.security.transport.ssl.enabled: true
-    xpack.security.transport.ssl.verification_mode: certificate
-    xpack.security.transport.ssl.keystore.path: /usr/share/elasticsearch/config/certs/elasticsearch-certs.p12
-    xpack.security.transport.ssl.truststore.path: /usr/share/elasticsearch/config/certs/elasticsearch-certs.p12
-    xpack.security.http.ssl.enabled: true
-    xpack.security.http.ssl.truststore.path: /usr/share/elasticsearch/config/certs/elasticsearch-certs.p12
-    xpack.security.http.ssl.keystore.path: /usr/share/elasticsearch/config/certs/elasticsearch-certs.p12
-      #anonymous:
-        #username: anonymous_user 
-        #roles: kibana_admin
-        #authz_exception: true 
+    xpack:
+      security:
+        enabled: true
+        transport:
+          ssl:
+            enabled: true
+            verification_mode: none
+            keystore.path: /usr/share/elasticsearch/config/certs/elasticsearch-certs.p12
+            truststore.path: /usr/share/elasticsearch/config/certs/elasticsearch-certs.p12
+        http:
+          ssl:
+            enabled: true
+            truststore.path: /usr/share/elasticsearch/config/certs/elasticsearch-certs.p12
+            keystore.path: /usr/share/elasticsearch/config/certs/elasticsearch-certs.p12
+        authc:
+          realms:
+            file:
+              file1:
+                order: 0
     # ---------------------------------- Monitoring ----------------------------------
-    xpack.monitoring.enabled: true
-    
+      monitoring:
+        elasticsearch:
+          collection.enabled: false
+        collection.enabled: true
 
-  role_mapping.yml: |-
-    superuser: 
-      - "cn=Kibana" 
+      #anonymous:
+        #username: anonymous_user
+        #roles: kibana_admin
+        #authz_exception: true
