--- a/efk_stack/templates/elasticsearch-pvc.yaml
+++ b/efk_stack/templates/elasticsearch-pvc.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.environment "sandbox" }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -17,4 +18,6 @@ spec:
   resources:
     requests:
       storage: "{{ .Values.elasticsearch.persistentVolume.azure.size }}"
+{{ end }}
+
 {{ end }}
