--- a/efk_stack/templates/elasticsearch_client-deployment.yaml
+++ b/efk_stack/templates/elasticsearch_client-deployment.yaml
@@ -7,9 +7,10 @@ metadata:
     {{- include "oht-devops.labels" . | nindent 4 }}
     role: client
   annotations:
+    checksum/init-config: {{ include (print $.Template.BasePath "/init_configmap.yaml") . | sha256sum }}
     checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
 spec:
-  replicas: 2
+  replicas: {{ .Values.elasticsearch.roles.client }}
   selector:
     matchLabels:
       app: {{ .Values.elasticsearch.name }}-client
@@ -37,24 +38,9 @@ spec:
         image: "{{ .Values.elasticsearch.image.repository }}:{{ .Values.elasticsearch.image.tag }}"
         command:
         - sh
-        - -c
-        - |
-          #!/usr/bin/env bash
-          set -euo pipefail
-          elasticsearch-keystore create
-          #for i in /tmp/keystoreSecrets/*/*; do
-            #key=$(basename $i)
-            #echo "Adding file $i to keystore key $key"
-            #elasticsearch-keystore add-file "$key" "$i"
-          #done
-          # Add the bootstrap password since otherwise the Elasticsearch entrypoint tries to do this on startup
-          if [ ! -z ${ELASTIC_PASSWORD+x} ]; then
-            echo 'Adding env $ELASTIC_PASSWORD to keystore as key bootstrap.password'
-            echo "$ELASTIC_PASSWORD" | elasticsearch-keystore add -x bootstrap.password
-          fi
-          cp -a /usr/share/elasticsearch/config/elasticsearch.keystore /tmp/keystore/
+        - /tmp/init-scripts/elasticsearch-init.sh
         env:
-        - name: ELASTIC_PASSWORD
+        - name: ES_BOOTSTRAP_PASSWORD
           valueFrom:
             secretKeyRef:
               name: elastic-stack-secrets
@@ -62,6 +48,8 @@ spec:
         volumeMounts:
           - name: keystore
             mountPath: /tmp/keystore
+          - name: elasticsearch-init-config
+            mountPath: /tmp/init-scripts
           #{{- range .Values.keystore }}
           #- name: keystore-{{ .secretName }}
             #mountPath: /tmp/keystoreSecrets/{{ .secretName }}
@@ -70,10 +58,8 @@ spec:
       - name: {{ .Values.elasticsearch.name }}-client
         image: "{{ .Values.elasticsearch.image.repository }}:{{ .Values.elasticsearch.image.tag }}"
         env:
-        - name: discovery.seed_hosts
-          value: "{{ .Values.elasticsearch.name }}-discovery.default.svc:9300,{{ .Values.elasticsearch.name }}-data.default.svc:9300,{{ .Values.elasticsearch.name }}-client.default.svc:9200"
         - name: NODE_MASTER
-          value: "true"
+          value: "false"
         - name: NODE_INGEST
           value: "true"
         - name: NODE_DATA
@@ -99,26 +85,52 @@ spec:
         - name: {{ .Values.elasticsearch.name }}-config
           mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
           subPath: elasticsearch.yml
-        - name: {{ .Values.elasticsearch.name }}-config
-          mountPath: /usr/share/elasticsearch/config/role_mapping.yml
-          subPath: role_mapping.yml
         - name: keystore
           mountPath: /usr/share/elasticsearch/config/elasticsearch.keystore
           subPath: elasticsearch.keystore
         - name: {{ .Values.elasticsearch.name }}-certs
           mountPath: /usr/share/elasticsearch/config/certs/
+      - name: {{ .Values.metricbeat.name }}
+        image: "{{ .Values.metricbeat.image.repository }}:{{ .Values.metricbeat.image.tag }}"
+        resources:
+          {{- toYaml .Values.metricbeat.resources | nindent 12 }}
+        volumeMounts:
+        - name: {{ .Values.metricbeat.name }}-config
+          mountPath: /usr/share/metricbeat/metricbeat.yml
+          subPath: metricbeat.yml
+        - name: {{ .Values.metricbeat.name }}-config
+          mountPath: /usr/share/metricbeat/modules.d/elasticsearch-xpack.yml
+          subPath: elasticsearch-xpack.yml
+        - name: {{ .Values.elasticsearch.name }}-ca
+          mountPath: /usr/share/metricbeat/data/elasticsearch-ca.pem
+          subPath: elasticsearch-ca.pem
       volumes:
-      - name: elasticsearch-data
-        emptyDir: {}
       - name: elasticsearch-config
         configMap:
           name: {{ .Release.Name }}-configmap
           items:
             - key: elasticsearch.yml
               path: elasticsearch.yml
-            - key: role_mapping.yml
-              path: role_mapping.yml
+      - name: {{ .Values.metricbeat.name }}-config
+        configMap:
+          name: {{ .Release.Name }}-configmap
+          items:
+            - key: metricbeat.yml
+              path: metricbeat.yml
+            - key: metricbeat-elasticsearch-xpack.yml
+              path: metricbeat-elasticsearch-xpack.yml
+      - name: elasticsearch-init-config
+        configMap:
+          name: {{ .Release.Name }}-init-configmap
+          items:
+            - key: elasticsearch-init.sh
+              path: elasticsearch-init.sh
       - name: keystore
+        emptyDir: {}
+      - name: {{ .Values.elasticsearch.name }}-ca
+        secret:
+          secretName: {{ .Values.elasticsearch.name }}-ca
+      - name: {{ .Values.elasticsearch.name }}-data
         emptyDir: {}
       - name: {{ .Values.elasticsearch.name }}-certs
         secret:
