--- a/efk_stack/templates/kibana-deployment.yaml
+++ b/efk_stack/templates/kibana-deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     {{- include "oht-devops.labels" . | nindent 4 }}
   annotations:
+    checksum/init-config: {{ include (print $.Template.BasePath "/init_configmap.yaml") . | sha256sum }}
     checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
 spec:
   replicas: {{ .Values.replicaCount }}
@@ -28,24 +29,9 @@ spec:
         image: "{{ .Values.kibana.image.repository }}:{{ .Values.kibana.image.tag }}"
         command:
         - sh
-        - -c
-        - |
-          #!/usr/bin/env bash
-          set -euo pipefail
-          kibana-keystore create
-          #for i in /tmp/keystoreSecrets/*/*; do
-            #key=$(basename $i)
-            #echo "Adding file $i to keystore key $key"
-            #kibana-keystore add-file "$key" "$i"
-          #done
-          # Add the bootstrap password since otherwise the kibana entrypoint tries to do this on startup
-          if [ ! -z ${ELASTIC_PASSWORD+x} ]; then
-            echo 'Adding env $ELASTIC_PASSWORD to keystore as key elasticsearch.password'
-            echo "$ELASTIC_PASSWORD" | kibana-keystore add -x elasticsearch.password
-          fi
-          cp -a /usr/share/kibana/data/kibana.keystore /tmp/keystore/
+        - /tmp/init-scripts/kibana-init.sh
         env:
-        - name: ELASTIC_PASSWORD
+        - name: ES_KIBANA_PASSWORD
           valueFrom:
             secretKeyRef:
               name: elastic-stack-secrets
@@ -53,6 +39,8 @@ spec:
         volumeMounts:
           - name: keystore
             mountPath: /tmp/keystore
+          - name: kibana-init-config
+            mountPath: /tmp/init-scripts
           #{{- range .Values.keystore }}
           #- name: keystore-{{ .secretName }}
             #mountPath: /tmp/keystoreSecrets/{{ .secretName }}
@@ -103,6 +91,12 @@ spec:
           items:
             - key: kibana.yml
               path: kibana.yml
+      - name: kibana-init-config
+        configMap:
+          name: {{ .Release.Name }}-init-configmap
+          items:
+            - key: kibana-init.sh
+              path: kibana-init.sh
       - name: keystore
         emptyDir: {}
       - name: {{ .Values.elasticsearch.name }}-ca
