--- a/efk_stack/templates/elasticsearch_master-deployment.yaml
+++ b/efk_stack/templates/elasticsearch_master-deployment.yaml
@@ -89,9 +89,14 @@ spec:
         - name: {{ .Values.elasticsearch.name }}-config
           mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
           subPath: elasticsearch.yml
+        - name: {{ .Values.elasticsearch.name }}-config
+          mountPath: /usr/share/elasticsearch/config/log4j2.properties
+          subPath: log4j2.properties
         - name: keystore
           mountPath: /usr/share/elasticsearch/config/elasticsearch.keystore
           subPath: elasticsearch.keystore
+        - name: logs
+          mountPath: /usr/share/elasticsearch/logs/
         - name: {{ .Values.elasticsearch.name }}-certs
           mountPath: /usr/share/elasticsearch/config/certs/
       - name: {{ .Values.metricbeat.name }}
@@ -108,6 +113,19 @@ spec:
         - name: {{ .Values.elasticsearch.name }}-ca
           mountPath: /usr/share/metricbeat/data/elasticsearch-ca.pem
           subPath: elasticsearch-ca.pem
+      - name: {{ .Values.filebeat.name }}
+        image: "{{ .Values.filebeat.image.repository }}:{{ .Values.filebeat.image.tag }}"
+        resources:
+          {{- toYaml .Values.filebeat.resources | nindent 12 }}
+        volumeMounts:
+        - name: {{ .Values.filebeat.name }}-config
+          mountPath: /usr/share/filebeat/filebeat.yml
+          subPath: filebeat.yml
+        - name: {{ .Values.elasticsearch.name }}-ca
+          mountPath: /usr/share/filebeat/data/elasticsearch-ca.pem
+          subPath: elasticsearch-ca.pem
+        - name: logs
+          mountPath: /usr/share/elasticsearch/logs/
       volumes:
       - name: elasticsearch-config
         configMap:
@@ -115,6 +133,8 @@ spec:
           items:
             - key: elasticsearch.yml
               path: elasticsearch.yml
+            - key: log4j2.properties
+              path: log4j2.properties
       - name: {{ .Values.metricbeat.name }}-config
         configMap:
           name: {{ .Release.Name }}-configmap
@@ -123,6 +143,12 @@ spec:
               path: metricbeat.yml
             - key: metricbeat-elasticsearch-xpack.yml
               path: elasticsearch-xpack.yml
+      - name: {{ .Values.filebeat.name }}-config
+        configMap:
+          name: {{ .Release.Name }}-configmap
+          items:
+            - key: filebeat.yml
+              path: filebeat.yml
       - name: elasticsearch-init-config
         configMap:
           name: {{ .Release.Name }}-init-configmap
@@ -131,13 +157,21 @@ spec:
               path: elasticsearch-init.sh
       - name: keystore
         emptyDir: {}
+      - name: logs
+        emptyDir: {}
       - name: {{ .Values.elasticsearch.name }}-ca
         secret:
           secretName: {{ .Values.elasticsearch.name }}-ca
-      - name: {{ .Values.elasticsearch.name }}-data
-        emptyDir: {}
       - name: {{ .Values.elasticsearch.name }}-certs
         secret:
           secretName: {{ .Values.elasticsearch.name }}-certs
 
+  volumeClaimTemplates:
+  - metadata:
+      name: {{ .Values.elasticsearch.name }}-data
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      resources:
+        requests:
+          storage: 5Gi
 {{ end }}
